--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:hint="@string/wert1"
         android:inputType="number"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,6 +73,7 @@
         android:ems="10"
         android:hint="@string/wert2"
         android:inputType="number"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
@@ -85,6 +87,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/grey"
+        android:onClick="calc"
         android:text="@string/button5"
         android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/button2"
@@ -99,6 +102,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/grey"
+        android:onClick="speichern"
         android:text="@string/button6"
         android:textColor="@color/red"
         app:layout_constraintEnd_toStartOf="@+id/button3"
@@ -112,6 +116,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/grey"
+        android:onClick="laden"
         android:text="@string/button7"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
